syntax = "proto3";

package erda.dop.projectpipeline;
option go_package = "github.com/erda-project/erda-proto-go/dop/projectpipeline/pb";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "common/openapi.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service ProjectPipelineService {
  option(erda.common.openapi_service) = {
    service : "dop",
    auth : {
      check_login : true,
      check_token : true,
    }
  };

  rpc Create(CreateProjectPipelineRequest)
      returns(CreateProjectPipelineResponse) {
    option(google.api.http) = {
      post : "/api/project-pipeline",
    };
    option(erda.common.openapi) = {
      path : "/api/project-pipeline",
    };
  }
}

message CreateProjectPipelineRequest {
  uint64 projectID = 1 [(validator.field) = {int_gt: 0}];
  string name = 2 [(validator.field) = {string_not_empty: true}];
  uint64 appID = 3;
  string sourceType = 4 [(validator.field) = {string_not_empty: true}];
  string ref = 5 [(validator.field) = {string_not_empty: true}];
  string path = 6;
  string fileName = 7 [(validator.field) = {string_not_empty: true}];
}

message CreateProjectPipelineResponse {
  ProjectPipeline ProjectPipeline = 1;

}

message ProjectPipeline {
  string ID = 1;
  string name = 2;
  string creator = 3;
  string category = 4;
  google.protobuf.Timestamp timeCreated = 5;
  google.protobuf.Timestamp timeUpdated = 6;
  string sourceType = 7;
  string remote = 8;
  string ref = 9;
  string path = 10;
  string fileName = 11;
  string pipelineSourceId = 12;
}